# ImgSlicer

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/ImgSlicer/: CMakeLists.txt  ImgSlicer.cpp  ImgSlicer.h  ImgSlicer.ui  main.cpp
cmake/: ExAddG3log.cmake  ExAddZlib.cmake
module/Logger/: CMakeLists.txt  LogRotate.cpp  LogRotateHelper.ipp  LogRotateUtility.cpp
translations/: ImgSlicer_zh_TW.ts
